applied css to loading

--- a/bhavCopy_FE/public/index.html
+++ b/bhavCopy_FE/public/index.html
@@ -52,7 +52,7 @@
 
 <div class="row text-center">
   <div class="col-md-12">
-    <h2 style="    color: #38d138;
+    <h2 style="    color: #047abf;
     font-weight: 600;">{{heading}}</h2>
   </div>
 </div>
